--- a/views/main/random.ejs
+++ b/views/main/random.ejs
@@ -11,7 +11,7 @@
             <div>
                 <% users.forEach((ele)=>{ %>
                     <div>
-                    <img src= <%= ele[0] %> class="profile-pic" alt="...">
+                    <img src= <%= ele[0] %>>
                     <h2 class=""> <%= `${ele[1]} ${ele[2]}` %> </h5>
                     </div>
                 <%})%>
